# rust-axum-crud

./: Cargo.toml
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handler/: auth.rs  users.rs
src/mail/: mails.rs  sendmail.rs
src/utils/: password.rs  token.rs
